# SynConvert

./: .gitignore  README.md  syn_convert_plan.md
SynConvert_v1.0.0/: README.md  pyproject.toml  requirements.txt
SynConvert_v1.0.0/backend/: __init__.py  converter.py  logger.py  main.py  queue.py  scanner.py
SynConvert_v1.0.1/: LICENSE.txt  launch.py  pyproject.toml  requirements.txt  synconvert_queue.json
SynConvert_v1.0.1/backend/: hardware.py  logger.py  main.py
SynConvert_v1.0.1/frontend/lib/: backend_bridge.dart  main.dart
SynConvert_v1.0.1/frontend/lib/pages/: wizard_page.dart
SynConvert_v1.0.1/frontend/test/: widget_test.dart
SynConvert_v1.0.1/frontend/web/: manifest.json
SynConvert_v1.0.1/logs/: session_20260428_125502.json
SynConvert_v1.0.1/synconvert.egg-info/: PKG-INFO
SynConvert_v1.0.1/tests/: test_scanner.py
SynConvert_v1.0.2/: launch.py  synconvert_config.json  synconvert_queue.json
SynConvert_v1.0.2/backend/: converter.py  hardware.py  logger.py  main.py
SynConvert_v1.0.2/logs/: session_20260428_125502.json  session_20260428_141923.json
SynConvert_v1.0.2/synconvert.egg-info/: SOURCES.txt  top_level.txt
SynConvert_v1.0.3/: launch.py  synconvert_config.json  synconvert_queue.json
SynConvert_v1.0.3/backend/: main.py  naming.py  presets.py  scanner.py
SynConvert_v1.0.3/frontend/: pubspec.yaml
SynConvert_v1.0.4/: launch.py  requirements.txt  synconvert_config.json
SynConvert_v1.0.5/: synconvert_queue.json
SynConvert_v1.0.6/: launch.py  pyproject.toml  run.bat  synconvert_config.json  synconvert_queue.json  version.py
(+100 files in other folders)
