[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synconvert"
version = "1.0.1"
description = "Offline-first batch video transcoder for mobile playback"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary - SynonTech" }
authors = [{ name = "SynonTech" }]

dependencies = [
    "static-ffmpeg>=2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
synconvert = "backend.main:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
